--- a/src/style.css
+++ b/src/style.css
@@ -14,9 +14,9 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 35%;
-  margin-top: 20px;
-  margin-bottom: 30px;
+  width: 40%;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 h1,
@@ -25,7 +25,7 @@ h3 {
   font-family: "Prompt", sans-serif;
   text-align: center;
   padding: 0px;
-  font-size: 2vw;
+  font-size: 3vw;
   color: rgb(60, 60, 251);
 }
 
@@ -33,7 +33,7 @@ h3 {
   box-sizing: border-box;
   margin-bottom: 20px;
   padding: 1em 1em;
-  width: 75%;
+  width: 96%;
   font-size: 12px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   font-family: "Prompt", sans-serif;
@@ -57,7 +57,7 @@ h3 {
 }
 
 .row {
-  padding-left: 10px;
+  padding: 0 10px;
 }
 
 .row1 {
@@ -65,13 +65,13 @@ h3 {
 }
 
 .showTable {
-  width: 65%;
+  width: auto;
+  padding-left: 10px;
   margin: 0 auto;
   font-family: "Prompt", sans-serif;
-  font-weight: 1;
+  /* font-weight: 1; */
   font-variant-ligatures: normal;
-  font-size: 1rem;
-  letter-spacing: 1px;
+  /* font-size: 1rem; */
 }
 
 table {
